Updating my cool website

--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-H-Hello World
+---
+layout: post
+title: \*~\*~ !!! My * Test * Page !!! ~*/~*/
+---
+
+<!DOCTYPE HTML>
+<html>
+  <head>
+    <title>{{ page.title }}</title>
+  </head>
+  <body>
+    <p>Here's a paragraph</p>
+  </body>
+</html>
